--- a/source/MyModelViewPresenter/Web/Web.config
+++ b/source/MyModelViewPresenter/Web/Web.config
@@ -2,10 +2,10 @@
 <configuration>
   <appSettings>
     <!-- SQLite database path - leave empty to use default App_Data/products.db -->
-    <add key="SQLiteDbPath" value="" />
+    <add key="SQLiteDbPath" value=""/>
 
     <!-- Fix for validation error -->
-    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
   </appSettings>
 
   <system.web>
@@ -14,10 +14,10 @@
         <add assembly="System.Threading.Tasks, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
       </assemblies>
     </compilation>
-    <httpRuntime targetFramework="4.8" />
+    <httpRuntime targetFramework="4.8"/>
     <pages>
       <controls>
-        <add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+        <add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
       </controls>
     </pages>
   </system.web>
@@ -26,10 +26,22 @@
     <!-- Set default document -->
     <defaultDocument>
       <files>
-        <clear />
-        <add value="Default.aspx" />
-        <add value="ProductManagement.aspx" />
+        <clear/>
+        <add value="Default.aspx"/>
+        <add value="ProductManagement.aspx"/>
       </files>
     </defaultDocument>
   </system.webServer>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="WebGrease" publicKeyToken="31BF3856AD364E35" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234"/>
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30AD4FE6B2A6AEED" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0"/>
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
 </configuration>
