--- a/source/MVPModernized/ProductApp.Tests.E2E/ProductApp.Tests.E2E.csproj
+++ b/source/MVPModernized/ProductApp.Tests.E2E/ProductApp.Tests.E2E.csproj
@@ -21,9 +21,7 @@
     </PackageReference>
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\ProductApp.Web\ProductApp.Web.csproj" />
-  </ItemGroup>
+  <!-- No project references needed for E2E tests -->
 
   <ItemGroup>
     <Using Include="Xunit" />
