--- a/.github/workflows/mvp-modernized-ci.yml
+++ b/.github/workflows/mvp-modernized-ci.yml
@@ -88,6 +88,24 @@ jobs:
           --blame \
           --blame-hang-timeout 5m
 
+    # Install Playwright browsers before running E2E tests
+    - name: Build E2E Tests Project
+      run: dotnet build ${{ env.PROJECT_PATH }}/ProductApp.Tests.E2E/ProductApp.Tests.E2E.csproj --configuration Release
+
+    - name: Install Playwright Browsers (Windows)
+      if: runner.os == 'Windows'
+      run: |
+        cd ${{ env.PROJECT_PATH }}/ProductApp.Tests.E2E
+        pwsh bin/Release/net9.0/playwright.ps1 install
+      shell: pwsh
+
+    - name: Install Playwright Browsers (Linux/macOS)
+      if: runner.os != 'Windows'
+      run: |
+        cd ${{ env.PROJECT_PATH }}/ProductApp.Tests.E2E
+        pwsh bin/Release/net9.0/playwright.ps1 install
+      shell: pwsh
+
     - name: Run E2E Tests
       run: |
         dotnet test ${{ env.PROJECT_PATH }}/ProductApp.Tests.E2E/ProductApp.Tests.E2E.csproj \
@@ -99,6 +117,9 @@ jobs:
           --collect:"XPlat Code Coverage" \
           --blame \
           --blame-hang-timeout 10m
+      env:
+        ASPNETCORE_ENVIRONMENT: Development
+        PLAYWRIGHT_BROWSERS_PATH: 0
 
     - name: Upload test results
       uses: actions/upload-artifact@v4
