--- a/.github/workflows/mvp-modernized-ci.yml
+++ b/.github/workflows/mvp-modernized-ci.yml
@@ -47,16 +47,7 @@ jobs:
       run: dotnet build ${{ env.PROJECT_PATH }} --configuration Release --no-restore
 
     - name: Run Unit Tests
-      run: |
-        dotnet test ${{ env.PROJECT_PATH }}/ProductApp.Tests/ProductApp.Tests.csproj \
-          --configuration Release \
-          --no-build \
-          --verbosity normal \
-          --logger "trx;LogFileName=unit-test-results.trx" \
-          --logger "console;verbosity=detailed" \
-          --collect:"XPlat Code Coverage" \
-          --blame \
-          --blame-hang-timeout 5m
+      run: dotnet test ${{ env.PROJECT_PATH }}/ProductApp.Tests/ProductApp.Tests.csproj --configuration Release --no-build --verbosity normal --logger "trx;LogFileName=unit-test-results.trx" --logger "console;verbosity=detailed" --collect:"XPlat Code Coverage" --blame --blame-hang-timeout 5m
 
     # Install Playwright browsers before running E2E tests
     - name: Build E2E Tests Project
@@ -77,16 +68,7 @@ jobs:
       shell: pwsh
 
     - name: Run E2E Tests
-      run: |
-        dotnet test ${{ env.PROJECT_PATH }}/ProductApp.Tests.E2E/ProductApp.Tests.E2E.csproj \
-          --configuration Release \
-          --no-build \
-          --verbosity normal \
-          --logger "trx;LogFileName=e2e-test-results.trx" \
-          --logger "console;verbosity=detailed" \
-          --collect:"XPlat Code Coverage" \
-          --blame \
-          --blame-hang-timeout 10m
+      run: dotnet test ${{ env.PROJECT_PATH }}/ProductApp.Tests.E2E/ProductApp.Tests.E2E.csproj --configuration Release --no-build --verbosity normal --logger "trx;LogFileName=e2e-test-results.trx" --logger "console;verbosity=detailed" --collect:"XPlat Code Coverage" --blame --blame-hang-timeout 10m
       env:
         ASPNETCORE_ENVIRONMENT: Development
         PLAYWRIGHT_BROWSERS_PATH: 0
@@ -130,16 +112,10 @@ jobs:
       run: dotnet build ${{ env.PROJECT_PATH }} --configuration Debug --no-restore
 
     - name: Run .NET Format check
-      run: |
-        dotnet format ${{ env.PROJECT_PATH }} --verify-no-changes --verbosity diagnostic || true
+      run: dotnet format ${{ env.PROJECT_PATH }} --verify-no-changes --verbosity diagnostic || true
 
-    - name: Run Code Analysis
-      run: |
-        dotnet build ${{ env.PROJECT_PATH }} --configuration Release \
-          /p:TreatWarningsAsErrors=false \
-          /p:EnableNETAnalyzers=true \
-          /p:AnalysisLevel=latest \
-          /p:EnforceCodeStyleInBuild=true
+    - name: Run Code Analysis  
+      run: dotnet build ${{ env.PROJECT_PATH }} --configuration Release /p:TreatWarningsAsErrors=false /p:EnableNETAnalyzers=true /p:AnalysisLevel=latest /p:EnforceCodeStyleInBuild=true
 
   publish-artifacts:
     name: Publish Build Artifacts
@@ -160,30 +136,16 @@ jobs:
       run: dotnet restore ${{ env.PROJECT_PATH }}
 
     - name: Publish Web Application
-      run: |
-        dotnet publish ${{ env.PROJECT_PATH }}/ProductApp.Web/ProductApp.Web.csproj \
-          --configuration Release \
-          --output ./publish/web \
-          --runtime linux-x64 \
-          --self-contained false
+      run: dotnet publish ${{ env.PROJECT_PATH }}/ProductApp.Web/ProductApp.Web.csproj --configuration Release --output ./publish/web --runtime linux-x64 --self-contained false
 
     - name: Publish Domain Library
-      run: |
-        dotnet publish ${{ env.PROJECT_PATH }}/ProductApp.Domain/ProductApp.Domain.csproj \
-          --configuration Release \
-          --output ./publish/domain
+      run: dotnet publish ${{ env.PROJECT_PATH }}/ProductApp.Domain/ProductApp.Domain.csproj --configuration Release --output ./publish/domain
 
     - name: Publish Application Library
-      run: |
-        dotnet publish ${{ env.PROJECT_PATH }}/ProductApp.Application/ProductApp.Application.csproj \
-          --configuration Release \
-          --output ./publish/application
+      run: dotnet publish ${{ env.PROJECT_PATH }}/ProductApp.Application/ProductApp.Application.csproj --configuration Release --output ./publish/application
 
     - name: Publish Infrastructure Library
-      run: |
-        dotnet publish ${{ env.PROJECT_PATH }}/ProductApp.Infrastructure/ProductApp.Infrastructure.csproj \
-          --configuration Release \
-          --output ./publish/infrastructure
+      run: dotnet publish ${{ env.PROJECT_PATH }}/ProductApp.Infrastructure/ProductApp.Infrastructure.csproj --configuration Release --output ./publish/infrastructure
 
     - name: Upload Web Application artifact
       uses: actions/upload-artifact@v4
