--- a/source/MVPModernized/ProductApp.Tests.E2E/ProductApp.Tests.E2E.csproj
+++ b/source/MVPModernized/ProductApp.Tests.E2E/ProductApp.Tests.E2E.csproj
@@ -6,7 +6,7 @@
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
-
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="Microsoft.Playwright" Version="1.54.0" />
@@ -20,9 +20,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
-
-  <!-- No project references needed for E2E tests -->
-
+  
+  <!-- No project references needed - we start the web app as external process -->
+  
   <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
