--- a/.github/workflows/mvp-modernized-ci.yml
+++ b/.github/workflows/mvp-modernized-ci.yml
@@ -49,21 +49,26 @@ jobs:
     - name: Run Unit Tests
       run: dotnet test ${{ env.PROJECT_PATH }}/ProductApp.Tests/ProductApp.Tests.csproj --configuration Release --no-build --verbosity normal --logger "trx;LogFileName=unit-test-results.trx" --logger "console;verbosity=detailed" --collect:"XPlat Code Coverage" --blame --blame-hang-timeout 5m
 
-    # E2E Tests with proper Playwright setup
+    # E2E Tests with proper Playwright setup and web app hosting
+    - name: Build Web Application (for E2E tests)
+      run: dotnet build ${{ env.PROJECT_PATH }}/ProductApp.Web/ProductApp.Web.csproj --configuration Debug --no-restore
+
     - name: Build E2E Tests Project
       run: dotnet build ${{ env.PROJECT_PATH }}/ProductApp.Tests.E2E/ProductApp.Tests.E2E.csproj --configuration Release
 
-    - name: Install Playwright
+    - name: Install Playwright Browsers
       run: |
         cd ${{ env.PROJECT_PATH }}/ProductApp.Tests.E2E
-        dotnet tool install --global Microsoft.Playwright.CLI
-        playwright install chromium
+        dotnet tool install --global Microsoft.Playwright.CLI || true
+        playwright install chromium --with-deps
       shell: bash
 
-    - name: Run E2E Tests
-      run: dotnet test ${{ env.PROJECT_PATH }}/ProductApp.Tests.E2E/ProductApp.Tests.E2E.csproj --configuration Release --no-build --verbosity normal --logger "trx;LogFileName=e2e-test-results.trx" --logger "console;verbosity=detailed" --collect:"XPlat Code Coverage" --blame --blame-hang-timeout 10m
+    - name: Run E2E Tests (with integrated web app)
+      run: dotnet test ${{ env.PROJECT_PATH }}/ProductApp.Tests.E2E/ProductApp.Tests.E2E.csproj --configuration Release --no-build --verbosity normal --logger "trx;LogFileName=e2e-test-results.trx" --logger "console;verbosity=detailed" --collect:"XPlat Code Coverage" --blame --blame-hang-timeout 15m
       env:
         ASPNETCORE_ENVIRONMENT: Development
+        DOTNET_ENVIRONMENT: Development
+        CI: true
 
     - name: Upload test results
       uses: actions/upload-artifact@v4
